# oxidd-vis

./: .gitignore  LICENSE  PLANNING.md  README.md  desktop.ini  workspace.code-workspace
data/: 13.bdd  (+13 more)
rust/: Cargo.toml  LICENSE_MIT
rust/app/: Cargo.toml
rust/app-macros/: Cargo.toml
rust/app-macros/src/: builder.rs  component.rs  component_vec.rs  default.rs  inheritable.rs  lib.rs  wasm.rs
rust/app/src/: lib.rs  new_wasm_interface.rs
rust/app/src/components/: button_component.rs  composite_component.rs  container_component.rs  dyn_component.rs  fill_component.rs  label_component.rs  mod.rs  modal_component.rs  overlay_component.rs  panel_component.rs  panel_handle_component.rs  text_component.rs  tooltip_component.rs
rust/app/src/components/assemblies/: component_with_data.rs  mod.rs  panel_button_component.rs  position_overlay_component.rs  prompt_component.rs  spacer_component.rs
rust/app/src/configuration/: configuration_object.rs  mutator.rs
rust/app/src/configuration/types/: container_config.rs  float_config.rs  int_config.rs  label_config.rs  location_config.rs  panel_config.rs
rust/app/src/configuration/util/: js_object.rs
rust/app/src/inputs/: binary_input.rs  bool_input.rs  f32_input.rs  i32_input.rs  inherited_input.rs  macros.rs  mod.rs  string_input.rs  u32_input.rs  variant_input.rs  wrapper.rs
rust/app/src/types/util/drawing/: mod.rs  renderer.rs
rust/app/src/types/util/drawing/layouts/: layered_layout_traits.rs  toggle_layout.rs
rust/app/src/types/util/drawing/layouts/layer_group_sorting/: average_group_alignment.rs
rust/app/src/types/util/drawing/layouts/layer_orderings/: dummy_layer_ordering.rs  random_layer_ordering.rs
rust/app/src/types/util/drawing/layouts/util/: remove_redundant_bendpoints.rs
rust/app/src/types/util/drawing/renderers/: latex_renderer.rs  webgl_renderer.rs
rust/app/src/types/util/drawing/renderers/util/: mod.rs
rust/app/src/types/util/drawing/renderers/webgl/: mod.rs  node_renderer.frag  node_renderer.rs  node_renderer.vert
rust/app/src/types/util/graph_structure/: graph_structure.rs
rust/app/src/types/util/graph_structure/graph_manipulators/: mod.rs  pointer_node_adjuster.rs
rust/app/src/types/util/graph_structure/graph_manipulators/label_adjusters/: level_label_adjuster.rs  mod.rs
rust/app/src/util/: logging.rs  matrix4.rs  mod.rs  point.rs  rc_refcell.rs  rectangle.rs
rust/app/src/util/watchables/: constant.rs  derived.rs  dyn_watchable.rs  dyn_watchable_setter.rs  field.rs  mod.rs  signaller.rs  tests.rs  watchable.rs  watchable_utils.rs  watchables_wasm.rs
rust/src/: lib.rs  new_wasm_interface.rs  traits.rs  wasm_interface.rs
rust/src/components/: button_component.rs  composite_component.rs  mod.rs
rust/src/configuration/: configuration.rs  configuration_object.rs  configuration_object_types.rs  mod.rs  mutator.rs  observe_configuration.rs
rust/src/configuration/types/: button_config.rs  choice_config.rs  composite_config.rs  int_config.rs  label_config.rs  mod.rs  panel_config.rs  text_output_config.rs
rust/src/configuration/util/: mod.rs
rust/src/inputs/: button.rs
rust/src/types/: bdd_drawer.rs  mod.rs  qdd_drawer.rs
rust/src/types/mtbdd/: mod.rs  mtbdd_drawer.rs
rust/src/types/qdd/: mod.rs  qdd_drawer.rs
rust/src/types/util/: edge_type.rs  graph_structure.rs  group_manager.rs  grouped_graph_structure.rs  mod.rs  node_tracker_manager.rs  source_tracker_manager.rs
rust/src/types/util/drawing/: diagram_layout.rs  drawer.rs  layout_rules.rs  renderer.rs
rust/src/types/util/drawing/layouts/: layered_layout.rs  layered_layout_traits.rs  mod.rs  random_test_layout.rs  sugiyama_layout.rs  sugiyama_lib_layout.rs  toggle_layout.rs  transition_layout.rs
rust/src/types/util/drawing/layouts/layer_group_sorting/: average_group_alignment.rs  mod.rs  ordering_group_alignment.rs
rust/src/types/util/drawing/layouts/layer_orderings/: dummy_layer_ordering.rs  edge_layer_ordering.rs  mod.rs  pseudo_random_layer_ordering.rs  random_layer_ordering.rs  sugiyama_ordering.rs
rust/src/types/util/drawing/layouts/layer_orderings/combinators/: sequence_ordering.rs
rust/src/types/util/drawing/layouts/layer_positionings/: brandes_kopf_positioning.rs  brandes_kopf_positioning_corrected.rs  dummy_layer_positioning.rs  mod.rs
rust/src/types/util/drawing/layouts/transition/: mod.rs  relate_elements.rs  transition_layers.rs  transition_layout.rs
rust/src/types/util/drawing/layouts/util/: color_label.rs  compute_layers_layout.rs  layered_layout_formatting.rs  mod.rs  remove_redundant_bendpoints.rs
rust/src/types/util/drawing/layouts/util/layered/: barycenter_ordering.rs  layer_orderer.rs  mod.rs
rust/src/types/util/drawing/renderers/: latex_renderer.rs  mod.rs  webgl_renderer.rs
rust/src/types/util/drawing/renderers/util/: Font.rs
rust/src/types/util/drawing/renderers/webgl/: edge_renderer.frag  edge_renderer.rs  edge_renderer.vert  matrix4.rs  mod.rs  node_outline.frag  node_outline.vert  node_renderer.frag  node_renderer.rs  node_renderer.vert  render_texture.rs  transformation.rs  vertex_renderer.rs
rust/src/types/util/graph_structure/: graph_structure.rs  grouped_graph_structure.rs  mod.rs  oxidd_graph_structure.rs
rust/src/types/util/graph_structure/graph_manipulators/: abstracted_graph.rs  child_edge_adjuster.rs  edge_to_adjuster.rs  group_presence_adjuster.rs  mod.rs  node_presence_adjuster.rs  pointer_node_adjuster.rs  rc_graph.rs  terminal_level_adjuster.rs
rust/src/types/util/graph_structure/graph_manipulators/label_adjusters/: group_label_adjuster.rs  level_label_adjuster.rs
rust/src/types/util/graph_structure/graph_manipulators/util/: graph_listener_manager.rs  mod.rs
rust/src/types/util/storage/: mod.rs  state_storage.rs
rust/src/util/: color.rs  convert_file.rs  dummy_bdd.rs  dummy_mtbdd.rs  free_id_manager.rs  logging.rs  matrix4.rs  mod.rs  rc_refcell.rs  rectangle.rs  transformation.rs  transition.rs
rust/src/util/watchables/: constant.rs  derived.rs  dyn_watchable.rs  field.rs  mod.rs  mutator.rs  tests.rs  trackers.rs  watchable.rs  watchable_utils.rs
(+263 files in other folders)
