[package]
name = "oxidd-viz-rust"
version = "0.1.0"
authors = []
edition = "2018"

[[bin]]
name = "convert_data"
test = false
bench = false
path = "src/util/convert_file.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
priority-queue = "2.0.2"
itertools = "0.12.1"
rust-sugiyama = "0.2.0"
num-rational = "0.4.2"
regex = "1.10.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }


[dependencies.oxidd-manager-index]
git = "https://github.com/OxiDD/oxidd.git"
rev = "a7ab177e55fbef1d381079ef82add66da2cb781d"
package = "oxidd-manager-index"

[dependencies.oxidd-core]
git = "https://github.com/OxiDD/oxidd.git"
rev = "a7ab177e55fbef1d381079ef82add66da2cb781d"
package = "oxidd-core"

[dependencies.oxidd-rules-bdd]
git = "https://github.com/OxiDD/oxidd.git"
rev = "a7ab177e55fbef1d381079ef82add66da2cb781d"
package = "oxidd-rules-bdd"

[dependencies.oxidd-cache]
git = "https://github.com/OxiDD/oxidd.git"
rev = "a7ab177e55fbef1d381079ef82add66da2cb781d"
package = "oxidd-cache"

[dependencies.oxidd]
git = "https://github.com/OxiDD/oxidd.git"
rev = "a7ab177e55fbef1d381079ef82add66da2cb781d"
package = "oxidd"
features = ["manager-index", "bdd", "bcdd", "mtbdd", "zbdd"]
default-features = false

[dependencies.web-sys]
version = "0.3.69"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlVertexArrayObject",
    "WebGlBuffer",
    "WebGlUniformLocation",
]


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
